--- a/test.ipynb
+++ b/test.ipynb
@@ -357,125 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_family(pokemon):\n",
-    "    poke = df[df[\"Name\"] == pokemon]\n",
-    "    evo1 = df[df[\"Chain\"] == pokemon]\n",
-    "    try:\n",
-    "        evo2 = df[df[\"Chain\"] == evo1[\"Name\"].values[0]]\n",
-    "    except:\n",
-    "        evo2 = pd.DataFrame(columns=df.columns)\n",
-    "    sousevo1 = df[df[\"Name\"] == poke[\"Chain\"].values[0]]\n",
-    "    try:\n",
-    "        sousevo2 = df[df[\"Name\"] == sousevo1[\"Chain\"].values[0]]\n",
-    "    except:\n",
-    "        sousevo2 = pd.DataFrame(columns=df.columns)\n",
-    "    \n",
-    "    path_to_images = \"images/final/\"\n",
-    "    poke_paths = poke[\"Name\"].apply(lambda x: path_to_images + x + \"/1.png\").values\n",
-    "    evo1_paths = evo1[\"Name\"].apply(lambda x: path_to_images + x + \"/1.png\").values\n",
-    "    evo2_paths = evo2[\"Name\"].apply(lambda x: path_to_images + x + \"/1.png\").values\n",
-    "    sousevo1_paths = sousevo1[\"Name\"].apply(lambda x: path_to_images + x + \"/1.png\").values\n",
-    "    sousevo2_paths = sousevo2[\"Name\"].apply(lambda x: path_to_images + x + \"/1.png\").values\n",
-    "\n",
-    "    # plot all images from left to right\n",
-    "    fig = go.Figure()\n",
-    "    fig.add_layout_image(\n",
-    "        dict(\n",
-    "                source=poke_paths[0],\n",
-    "                xref=\"x\",\n",
-    "                yref=\"y\",\n",
-    "                x=0,\n",
-    "                y=1,\n",
-    "                sizex=1,\n",
-    "                sizey=1,\n",
-    "            )\n",
-    "    )\n",
-    "    for i in range(len(evo1_paths)):\n",
-    "        fig.add_layout_image(\n",
-    "            dict(\n",
-    "                source=evo1_paths[i],\n",
-    "                xref=\"x\",\n",
-    "                yref=\"y\",\n",
-    "                x=1,\n",
-    "                y=1+i,\n",
-    "                sizex=1,\n",
-    "                sizey=1,\n",
-    "            )\n",
-    "        )\n",
-    "    for i in range(len(evo2_paths)):\n",
-    "        fig.add_layout_image(\n",
-    "            dict(\n",
-    "                source=evo2_paths[i],\n",
-    "                xref=\"x\",\n",
-    "                yref=\"y\",\n",
-    "                x=2,\n",
-    "                y=1+i,\n",
-    "                sizex=1,\n",
-    "                sizey=1,\n",
-    "            )\n",
-    "        )\n",
-    "    for i in range(len(sousevo1_paths)):\n",
-    "        fig.add_layout_image(\n",
-    "            dict(\n",
-    "                source=sousevo1_paths[i],\n",
-    "                xref=\"x\",\n",
-    "                yref=\"y\",\n",
-    "                x=-1,\n",
-    "                y=1+i,\n",
-    "                sizex=1,\n",
-    "                sizey=1,\n",
-    "            )\n",
-    "        )\n",
-    "    for i in range(len(sousevo2_paths)):\n",
-    "        fig.add_layout_image(\n",
-    "            dict(\n",
-    "                source=sousevo2_paths[i],\n",
-    "                xref=\"x\",\n",
-    "                yref=\"y\",\n",
-    "                x=-2,\n",
-    "                y=1+i,\n",
-    "                sizex=1,\n",
-    "                sizey=1,\n",
-    "            )\n",
-    "        )\n",
-    "    fig.update_layout(\n",
-    "        width=500,\n",
-    "        height=200,\n",
-    "        xaxis=dict(\n",
-    "            showticklabels=False,\n",
-    "            ticks='',\n",
-    "            zeroline=False,\n",
-    "            range=[-2, 3],\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            showticklabels=False,\n",
-    "            ticks='',\n",
-    "            zeroline=False,\n",
-    "            range=[0, 2],\n",
-    "        ),\n",
-    "        margin=dict(l=0, r=0, t=0, b=0),\n",
-    "    )\n",
-    "    if pokemon == \"Eevee\":\n",
-    "        fig.update_layout(\n",
-    "            height=700,\n",
-    "            width=200,\n",
-    "            yaxis=dict(\n",
-    "                range=[0, 7],\n",
-    "            ),\n",
-    "            xaxis=dict(\n",
-    "                range=[0, 2],\n",
-    "            )\n",
-    "        ),\n",
-    "    fig.show()"
+    "from utils import plot_family"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
