CNN model with préprocess upadate

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "from utils import *\n",
     "from PIL import Image\n",
     "import os\n",
-    "from os import listdir\n"
+    "from os import listdir"
    ]
   },
   {
@@ -45,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Whitening"
+    "## Whitening & Resizing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,8 @@
     "                newData.append((255, 255, 255, 255))\n",
     "        # save the image with the new data\n",
     "        img.putdata(newData)\n",
+    "        # resize the image\n",
+    "        img = img.resize(image_size)\n",
     "        # replace the old image with the new image with same name as the old image\n",
     "        # print(image_path)\n",
     "        img.save(image_path)\n"
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +111,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Link type through IMG and Name "
+    "### Link w/ folder name and csv Name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -629,6 +631,26 @@
       "Milotic\n",
       "Miltank\n",
       "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
+      "Mime Jr\n",
       "Mimikyu\n",
       "Minccino\n",
       "Minior\n",
@@ -1054,10 +1076,11 @@
       "Zigzagoon\n",
       "Zoroark\n",
       "Zorua\n",
+      "Zubat\n",
       "Zweilous\n",
       "Zygarde\n",
-      "(18566, 3)\n",
-      "(18544, 6)\n"
+      "(18584, 3)\n",
+      "(18542, 6)\n"
      ]
     }
    ],
@@ -1129,22 +1152,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(905, 18)"
-      ]
+      "text/plain": "(905, 18)"
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,49 +1171,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#for folder_name in image_folder_path:\n",
+    "#    # find all folder with 22 images\n",
+    "#    if len(os.listdir(folder_name)) == 22:\n",
+    "#        print(folder_name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### One Hot Encoding"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "# initialize the label binarizer\n",
+    "lb = LabelBinarizer()\n",
+    "\n",
+    "# create a one-hot encoding for the type1 and type2 columns\n",
+    "type1 = lb.fit_transform(data['type1'])\n",
+    "type2 = lb.fit_transform(data['type2'])\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Define the CNN"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# define two sets of inputs: the images and the categorical inputs type1 and type2\n",
+    "image_input = tf.keras.Input(shape=input_shape, name='image_input')\n",
+    "category_input = tf.keras.Input(shape=(2,), name='category_input')\n",
+    "\n",
+    "# define the first branch of the CNN -- the image branch\n",
+    "# downsize the image from 96x96x4 to 24x24x4\n",
+    "x = tf.keras.layers.Conv2D(4, (3, 3), strides=(2, 2), padding='same')(image_input)\n",
+    "# downsize the image from 24x24x4 to 12x12x8\n",
+    "x = tf.keras.layers.Conv2D(8, (3, 3), strides=(2, 2), padding='same')(x)\n",
+    "# downsize the image from 12x12x8 to 6x6x16\n",
+    "x = tf.keras.layers.Conv2D(16, (3, 3), strides=(2, 2), padding='same')(x)\n",
+    "# flatten the image from 6x6x16 to 576x16\n",
+    "x = tf.keras.layers.Flatten()(x)\n",
+    "\n",
+    "# define the second branch of the CNN -- the categorical branch\n",
+    "# 18 categories plus 2 of these mixed categories is 171 combinations of type1 and type2\n",
+    "# upsize the categorical input from 2 to attaining 256\n",
+    "y = tf.keras.layers.Dense(256, activation='relu')(category_input)\n",
+    "\n",
+    "# merge the output of the two branches\n",
+    "z = tf.keras.layers.concatenate([x, y])\n",
+    "\n",
+    "# define the output of the model as the output of the final Dense layer\n",
+    "output = tf.keras.layers.Dense(6, activation='linear')(z)\n",
+    "\n",
+    "# define the model with two inputs and one output\n",
+    "model = tf.keras.Model(inputs=[image_input, category_input], outputs=output)\n",
+    "\n",
+    "# compile the model\n",
+    "model.compile(loss='mean_squared_error', optimizer='adam', metrics=['accuracy'])\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/final/Aipom\n",
-      "images/final/Floette\n",
-      "images/final/Girafarig\n",
-      "images/final/Gligar\n",
-      "images/final/Golbat\n",
-      "images/final/Goldeen\n",
-      "images/final/Kadabra\n",
-      "images/final/Landorus\n",
-      "images/final/Magikarp\n",
-      "images/final/Murkrow\n",
-      "images/final/Octillery\n",
-      "images/final/Piloswine\n",
-      "images/final/Ponyta\n",
-      "images/final/Rapidash\n",
-      "images/final/Rhydon\n",
-      "images/final/Rhyhorn\n",
-      "images/final/Scyther\n",
-      "images/final/Seaking\n",
-      "images/final/Sneasel\n",
-      "images/final/Sudowoodo\n",
-      "images/final/Thundurus\n",
-      "images/final/Tornadus\n",
-      "images/final/Ursaring\n",
-      "images/final/Wooper\n",
-      "images/final/Xatu\n"
+      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model to work.\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "for folder_name in image_folder_path:\n",
-    "    # find all folder with 22 images\n",
-    "    if len(os.listdir(folder_name)) == 22:\n",
-    "        print(folder_name)\n",
-    "    "
-   ]
+    "# plot the model\n",
+    "tf.keras.utils.plot_model(model, show_shapes=True, show_layer_names=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
