name generatin included in site

--- a/name_gen.ipynb
+++ b/name_gen.ipynb
@@ -204,9 +204,9 @@
     "char_to_index[' '] = 0\n",
     "char_to_index['.'] = 27\n",
     "\n",
-    "index_to_char = dict( (i, chr(i+96)) for i in range(1,27))\n",
-    "index_to_char[0] = ' '\n",
-    "index_to_char[27] = '.'\n",
+    "    index_to_char = dict( (i, chr(i+96)) for i in range(1,27))\n",
+    "    index_to_char[0] = ' '\n",
+    "    index_to_char[27] = '.'\n",
     "\n",
     "max_char = len(max(names, key=len))\n",
     "m = len(names)\n",
@@ -337,14 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def make_name(model, types, stats):\n",
+    "def make_name(model, types=np.zeros((1, type_dim)), stats=np.array([[100, 100, 100, 100, 100, 100]])):\n",
     "    name = []\n",
-    "    x = np.zeros((1, max_char, char_dim + type_dim + stats_dim))\n",
+    "    x = np.zeros((1, max_char, char_dim))\n",
+    "    print(x.shape)\n",
+    "    types = np.tile(types, (1, max_char, 1))\n",
+    "    print(types.shape)\n",
+    "    # # concatenatre types with x after char_dim\n",
+    "    x = np.concatenate((x, types), axis=2)\n",
+    "    # print(x.shape)\n",
+    "    # # concatenate stats at the end of x\n",
+    "    stats = np.tile(stats, (1, max_char, 1))\n",
+    "    print(stats.shape)\n",
+    "    x = np.concatenate((x, stats), axis=2)\n",
+    "    # # x = np.expand_dims(x, axis=2)\n",
+    "    # print(x.shape)\n",
+    "    \n",
     "    end = False\n",
     "    i = 0\n",
     "    \n",
@@ -452,8 +465,40 @@
       "\n",
       "Names generated after epoch 375:\n",
       "topaery.\n",
-      "yenuebd.\n"
+      "yenuebd.\n",
+      "bersen.\n",
+      "\n",
+      "Names generated after epoch 400:\n",
+      "jelidcpwtkz.\n",
+      "xpuety.\n",
+      "zaraazarkfz.\n",
+      "\n",
+      "Names generated after epoch 425:\n",
+      "ingealhp.\n",
+      "quinetjpbhm.\n",
+      ".\n",
+      "\n",
+      "Names generated after epoch 450:\n",
+      "ardobyoiuws.\n",
+      "hveniasjeiu.\n",
+      "jotosizr.\n",
+      "\n",
+      "Names generated after epoch 475:\n",
+      "eidmoso.\n",
+      "rocotar.\n",
+      "waiplei.\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x18affa77880>"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -474,28 +519,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eldimitenpe.\n"
+      "(1, 13, 28)\n",
+      "(1, 13, 18)\n",
+      "(1, 13, 6)\n",
+      "tyjagaangaa.\n"
      ]
     }
    ],
    "source": [
-    "make_name(model)"
+    "make_name(model, types=np.array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('name_gen.h5')"
+    "model.save('name_gen_type_stat.h5')"
    ]
   }
  ],
