--- a/GAN/GAN.ipynb
+++ b/GAN/GAN.ipynb
@@ -31,6 +31,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PREPARATION DES DONNEES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -4535,6 +4543,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CREATION DES MODELES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -4757,7 +4773,7 @@
    "source": [
     "# build the gan\n",
     "gan_model = define_gan(generator, discriminator)\n",
-    "gan_model.summary()"
+    "tf.keras.utils.plot_model(gan_model, show_shapes=True)"
    ]
   },
   {
