correction parametre gen noms flaskapp

--- a/name_gen.ipynb
+++ b/name_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  Charmeleon   Fire     NaN  58      64       58       80       65     80"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +204,9 @@
     "char_to_index[' '] = 0\n",
     "char_to_index['.'] = 27\n",
     "\n",
-    "    index_to_char = dict( (i, chr(i+96)) for i in range(1,27))\n",
-    "    index_to_char[0] = ' '\n",
-    "    index_to_char[27] = '.'\n",
+    "index_to_char = dict( (i, chr(i+96)) for i in range(1,27))\n",
+    "index_to_char[0] = ' '\n",
+    "index_to_char[27] = '.'\n",
     "\n",
     "max_char = len(max(names, key=len))\n",
     "m = len(names)\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,18 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.91741457 -0.93276107 -0.77294911 -0.15556914 -0.1773554  -0.74117922]\n",
-      " [-0.34618703 -0.49492457 -0.29849219  0.35589878  0.38008836 -0.21237763]\n",
-      " [ 0.41544969  0.17867004  0.3793034   1.037856    1.12334671  0.49269117]\n",
-      " [-1.14590559 -0.83172188 -0.97628779 -0.32605844 -0.73479917 -0.03611043]\n",
-      " [-0.4223507  -0.42756511 -0.46794109  0.35589878 -0.1773554   0.49269117]]\n"
+      "[[-0.93086301 -0.94855447 -0.78768439 -0.15621768 -0.18050015 -0.76499173]\n",
+      " [-0.36777359 -0.5114464  -0.3081211   0.3527496   0.38170735 -0.24142719]\n",
+      " [ 0.38301231  0.16102755  0.3769693   1.03137264  1.13131736  0.45665887]\n",
+      " [-1.15609878 -0.84768338 -0.99321151 -0.32587344 -0.74270766 -0.06690567]\n",
+      " [-0.44285218 -0.44419901 -0.47939371  0.3527496  -0.18050015  0.45665887]]\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,26 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def make_name(model, types=np.zeros((1, type_dim)), stats=np.array([[100, 100, 100, 100, 100, 100]])):\n",
+    "def make_name(model, types=np.zeros((1, type_dim)), stats=np.zeros((1, stats_dim))):\n",
     "    name = []\n",
     "    x = np.zeros((1, max_char, char_dim))\n",
-    "    print(x.shape)\n",
+    "\n",
     "    types = np.tile(types, (1, max_char, 1))\n",
-    "    print(types.shape)\n",
-    "    # # concatenatre types with x after char_dim\n",
     "    x = np.concatenate((x, types), axis=2)\n",
-    "    # print(x.shape)\n",
-    "    # # concatenate stats at the end of x\n",
+    "\n",
     "    stats = np.tile(stats, (1, max_char, 1))\n",
-    "    print(stats.shape)\n",
     "    x = np.concatenate((x, stats), axis=2)\n",
-    "    # # x = np.expand_dims(x, axis=2)\n",
-    "    # print(x.shape)\n",
     "    \n",
     "    end = False\n",
     "    i = 0\n",
@@ -519,22 +513,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 13, 28)\n",
-      "(1, 13, 18)\n",
-      "(1, 13, 6)\n",
-      "tyjagaangaa.\n"
+      "(1, 13, 52)\n",
+      "rgjahahawao.\n"
      ]
     }
    ],
    "source": [
-    "make_name(model, types=np.array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]))"
+    "make_name(model)"
    ]
   },
   {
@@ -544,6 +536,110 @@
    "outputs": [],
    "source": [
     "model.save('name_gen_type_stat.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model('model_namegen_500_type_stat.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]]]\n",
+      "[[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+      "   0. 0. 0. 0. 0. 0.]]]\n",
+      "xurdre .\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_name(model, types=np.array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]), stats=np.zeros((1, stats_dim)))"
    ]
   }
  ],
